# oidc-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/oidc-rs/: Cargo.toml  README.md
crates/oidc-rs-actix/: Cargo.toml  README.md
crates/oidc-rs-actix/examples/: README.md  basic_server.rs
crates/oidc-rs-actix/src/: error.rs  extractor.rs  lib.rs  middleware.rs
crates/oidc-rs-actix/tests/: smoke.rs
crates/oidc-rs-axum/: Cargo.toml  README.md
crates/oidc-rs-axum/examples/: README.md  basic_server.rs
crates/oidc-rs-axum/src/: error.rs  extractor.rs  lib.rs  middleware.rs
crates/oidc-rs-axum/tests/: smoke.rs
crates/oidc-rs/src/: config.rs  exchanger.rs  identity.rs  lib.rs  resolve.rs  state.rs  validator.rs
crates/oidc-rs/tests/fixtures/: extract_jwk.sh  test_rsa_e.txt  test_rsa_n.txt  test_rsa_priv.pem
docs/superpowers/plans/: 2026-06-21-standalone-oidc-rs.md  2026-06-27-oidc-rs-axum.md
docs/superpowers/specs/: 2026-06-21-standalone-oidc-rs-design.md  2026-06-27-oidc-rs-axum-design.md
