[package]
name = "oidc-rs-actix"
description = "Actix-Web adapter for the oidc-rs OIDC Resource Server library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["oidc", "actix", "actix-web", "jwt", "auth"]
categories = ["authentication", "web-programming::http-server"]

[dependencies]
oidc-rs = { path = "../oidc-rs" }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
