[package]
name = "oidc-rs-axum"
description = "Axum adapter for the oidc-rs OIDC Resource Server library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["oidc", "axum", "jwt", "auth", "openid"]
categories = ["authentication", "web-programming::http-server"]

[dependencies]
oidc-rs = { path = "../oidc-rs" }
axum = "0.8"
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
